# LLM-Switch

./: .gitignore  README.md  README_CN.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
openspec/changes/claude-settings-manager/: design.md  proposal.md  tasks.md
openspec/changes/claude-settings-manager/specs/host-connection/: spec.md
openspec/changes/claude-settings-manager/specs/remote-sync/: spec.md
openspec/changes/claude-settings-manager/specs/settings-editor/: spec.md
openspec/changes/claude-settings-manager/specs/settings-profile/: spec.md
scripts/: bump-version.mjs
src/: App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_default_host_and_sync_hashes.sql  003_add_sort_order.sql  004_add_sync_keys.sql
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: host.rs  mod.rs  profile.rs  sync_history.rs  usage.rs
src-tauri/src/services/: crypto.rs  host_service.rs  mod.rs  profile_service.rs  sync_history_service.rs  sync_service.rs  usage_service.rs
src/components/: HostManager.tsx  ProfileSidebar.tsx  SettingsEditor.tsx  SyncPanel.tsx  UsageDisplay.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh-CN.json
src/styles/: index.css
