[package]
name = "llm-switch"
version = "1.0.0"
edition = "2021"

[lib]
name = "llm_switch_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ssh2 = "0.9"
aes-gcm = "0.10"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
